src/test/resources/errors/function-call.intp
f = [1, 2, true]
f()